--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "dsf",
   "main": "index.js",
   "scripts": {
+    "start-cli": "node ./src/client/client-cli/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,9 +19,12 @@
   },
   "homepage": "https://github.com/Jeffrey-S-Smith/haiku#readme",
   "dependencies": {
+    "axios": "^1.1.0",
+    "inquirer": "^8.2.4",
     "jest": "^29.1.2",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.2",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "yargs": "^17.6.0"
   }
 }
