--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^29.1.2",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.2",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "syllable-checker": "github:rmccrear/syllable-length-checker"
   }
 }
