--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
-    "yargs": "^17.6.0"
+    "yargs": "^17.6.0",
     "syllable-checker": "github:rmccrear/syllable-length-checker"
   }
 }
