--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start-cli": "node ./src/client/client-cli/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/Jeffrey-S-Smith/haiku#readme",
   "dependencies": {
     "axios": "^1.1.0",
+    "chalk": "^4.1.2",
     "inquirer": "^8.2.4",
     "jest": "^29.1.2",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
-    "yargs": "^17.6.0",
-    "syllable-checker": "github:rmccrear/syllable-length-checker"
+    "syllable": "^4.1.0",
+    "syllable-checker": "github:rmccrear/syllable-length-checker",
+    "yargs": "^17.6.0"
   }
 }
