--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "cli-single-player": "node ./src/client/client-cli/index.js single-player",
     "cli-multi-player": "node ./src/client/client-cli/index.js multi-player -s localhost",
-    "server": "node ./src/HUB/server.js",
+    "server": "NODE_ENV=production node ./src/HUB/server.js",
+    "dev-server": "NODE_ENV=development nodemon ./src/HUB/server.js",
     "test": "jest --verbose --coverage"
   },
   "repository": {
@@ -23,8 +24,8 @@
   "dependencies": {
     "axios": "^1.1.0",
     "chalk": "^4.1.2",
+    "dotenv": "^16.0.3",
     "inquirer": "^8.2.4",
-    "jest": "^29.1.2",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
@@ -34,6 +35,7 @@
     "yargs": "^17.6.0"
   },
   "devDependencies": {
-    "@jest/types": "^29.1.2"
+    "@jest/types": "^29.1.2",
+    "jest": "^29.1.2"
   }
 }
