--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
     "inquirer": "^8.2.4",
+    "random-word-slugs": "^0.1.6",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
